--- a/css/yellow.css
+++ b/css/yellow.css
@@ -286,116 +286,121 @@ ul.enterKey li:last-child{
 	border:1px solid #C64646;
 }
 /*订单列表*/
-#order-list .dishOrder .orderList .mingxi li a{
+#order-page3 .dishOrder .orderList .mingxi li a{
 	font-size: 1.2em;
 	background:#E87117;
 	color: #FFFFFF;
 	font-weight: bold;
 }
-#order-list .lists.active{
-	background: #DBD9D9;
+#order-page3 .lists.active,#order-page1 .lists.active{
+	background: #FAD8C6;
 }
-#order-list .dishlist .searchinput input,#order-list .dishlist .searchinput li select{
+#order-page3 .dishlist .searchinput input,#order-page3 .dishlist .searchinput li select{
 	background: rgba(255,255,255,0.5);
 }
-#order-list .dishlist .searchinput li.searchbtn img{
+#order-page3 .dishlist .searchinput li.searchbtn img{
 	border:1px solid #646464;
 	background: #DDDDDD;
 }
-#order-list .dishlist .searchinput li.searchbtn:active img{
+#order-page3 .dishlist .searchinput li.searchbtn:active img{
 	background: #999999;
 }
-#order-list .dishlist .searchinput li.clearinput a{
-	background: #FA9843;
+#order-page3 .dishlist .searchinput li.clearinput a{
 	color:#FFFFFF;
+	background: #FA9843;
 }
-#order-list .dishlist .searchinput li.clearinput:active a{
+#order-page3 .dishlist .searchinput li.clearinput:active a{
 	background: #E87117;
 }
-#order-list .dishlist .checkOutbtns li,#netmeal .dishlist .checkOutbtns li{
+#order-page3 .dishlist .checkOutbtns li,#order-page2 .dishlist .checkOutbtns li{
 	background:#FA9843;
 	color:#FFFFFF;
 }
-#order-list .dishlist .checkOutbtns li:active,#netmeal .dishlist .checkOutbtns li:active{
+#order-page3 .dishlist .checkOutbtns li:active,#order-page2 .dishlist .checkOutbtns li:active{
 	background:#E87117;
 }
-#order-list .dishlist .checkOut-con,#netmeal .dishlist .checkOut-con{
+#order-page3 .dishlist .checkOut-con,#order-page2 .dishlist .checkOut-con{
 	background:#FAAF74;
+	color: #FFFFFF;
 }
-#order-list .dishlist .checkOut-con li,#netmeal .dishlist .checkOut-con li{
+#order-page3 .dishlist .checkOut-con li,#order-page2 .dishlist .checkOut-con li{
 	font-size: 1.1em;
 	
 }
-#order-list .dishlist .checkOut-lists .checkOut-list,#netmeal .dishlist .checkOut-lists .checkOut-list{
+#order-page3 .dishlist .checkOut-lists .checkOut-list,#order-page2 .dishlist .checkOut-lists .checkOut-list{
 	background:#EAEAEA;
 	border-bottom: 1px solid #CCCCCC;
 }
-#order-list .dishlist .checkOut-lists .checkOut-list.active,#netmeal .dishlist .checkOut-lists .checkOut-list.active{
+#order-page3 .dishlist .checkOut-lists .checkOut-list.active,#order-page2 .dishlist .checkOut-lists .checkOut-list.active{
 	background:#FAD8C6;
 }
-#order-list .dishlist .checkOutpage,#netmeal .dishlist .checkOutpage,#jiaobanliushui .checkOutpage{
+#order-page3 .dishlist .checkOutpage,#order-page2 .dishlist .checkOutpage,#jiaobanliushui .checkOutpage{
 	background: rgba(151,151,151,0.3);
 	font-size: 1.2em;
 }
-#order-list .dishlist .checkOutpage li,#netmeal .dishlist .checkOutpage li,#jiaobanliushui .checkOutpage li{
+#order-page3 .dishlist .checkOutpage li,#order-page2 .dishlist .checkOutpage li,#jiaobanliushui .checkOutpage li{
 	background: url("../img/page-bg1.png");
 	background-size:100% 100% ;
 } 
-#order-list .dishlist .checkOutpage li.page-num.active,#netmeal .dishlist .checkOutpage li.page-num.active,#jiaobanliushui .checkOutpage li.page-num.active{
+#order-page3 .dishlist .checkOutpage li.page-num.active,#order-page2 .dishlist .checkOutpage li.page-num.active,#jiaobanliushui .checkOutpage li.page-num.active{
 	background: #FA9843;
 	color:#FFFFFF;
 }
-#order-list .dishlist .checkOutpage li.circle,#netmeal .dishlist .checkOutpage li.circle,#jiaobanliushui .checkOutpage li.circle{
+#order-page3 .dishlist .checkOutpage li.circle,#order-page2 .dishlist .checkOutpage li.circle,#jiaobanliushui .checkOutpage li.circle{
 	background: url("../img/page-bg.png");
 }
-#order-list .dishlist .checkOutpage li:last-child img,#netmeal .dishlist .checkOutpage li:last-child img,#jiaobanliushui .checkOutpage li:last-child img{
+#order-page3 .dishlist .checkOutpage li:last-child img,#order-page2 .dishlist .checkOutpage li:last-child img{
+	background: url("../img/page-bg1.png") no-repeat;
+	background-size:100% 100% ;
+}
+#jiaobanliushui .checkOutpage li:last-child img{
 	background: url("../img/page-bg1.png") no-repeat;
 	background-size:100% 100% ;
 }
 /*反结算   购物车菜单数量弹出框*/
-#order .dishCount-outer p.tishi{
+#order-page1 .dishCount-outer p.tishi{
 	border:1px solid #FF0000;
 	background: #FFFFFF;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 }
-#order-list .fanjiesuan-outer,#order .dishCount-outer{
+#order-page3 .fanjiesuan-outer,#order-page1 .dishCount-outer{
 	background: #646464;
 }
-#order-list .fanjiesuan-outer input,#order .dishCount-outer input{
+#order-page3 .fanjiesuan-outer input,#order-page1 .dishCount-outer input{
 	border:1px solid #FAAE74;
 	box-shadow: 0 0 5px #FAAE74;
 }
-#order-list .fanjiesuan-outer button,#order .dishCount-outer button{
+#order-page3 .fanjiesuan-outer button,#order-page1 .dishCount-outer button{
 	font-size: 1.3em;
 	color:#FFFFFF;
 }
-#order-list .fanjiesuan-outer button:first-child{
+#order-page3 .fanjiesuan-outer button:first-child{
 	background: #7CC690;
 }
-#order .dishCount-outer button:first-child{
+#order-page1 .dishCount-outer button:first-child{
 	background: #7CC690;
 }
-#order-list .fanjiesuan-outer button:last-child{
+#order-page3 .fanjiesuan-outer button:last-child{
 	background: #FAAE74;
 }
-#order .dishCount-outer button:last-child{
+#order-page1 .dishCount-outer button:last-child{
 	background: #FAAE74;
 }
-#order-list .fanjiesuan-outer .enterKey,#order .dishCount-outer .enterKey{
+#order-page3 .fanjiesuan-outer .enterKey,#order-page1 .dishCount-outer .enterKey{
 	font-size: 2em;
 }
 /*网络取餐*/
-#netmeal .dishlist .checkOutbtns li.active{
+#order-page2 .dishlist .checkOutbtns li.active{
 	background: #E87117;
 }
-#netmeal .handle button{
+#order-page2 .handle button{
 	background:#E87117;
 	color:#FFFFFF;
 	font-size: 1.2em;
 }
-#netmeal .handle button:active{
+#order-page2 .handle button:active{
 	background:#CE6215;
 }
 /*交班*/
@@ -455,7 +460,7 @@ ul.enterKey li:last-child{
 	font-size: 1.1em;
 	font-weight: bold;
 	color:#FFFFFF;
-	background:linear-gradient(to bottom,#FCC198,#F2A56C);
+	background:#FAAF74;
 }
 #jiaobanRecord .jbR-con-lists{
 	background: #E8E8E8;
@@ -473,7 +478,7 @@ ul.enterKey li:last-child{
 	font-size: 1.1em;
 	font-weight: bold;
 	color:#FFFFFF;
-	background:linear-gradient(to bottom,#FCC198,#F2A56C);
+	background:#FAAF74;
 }
 #jiaobanliushui .jbR-con .jbR-con-list li{
 	border-bottom: 1px solid #CCCCCC;
